--- a/src/styles/skitter.css
+++ b/src/styles/skitter.css
@@ -1,49 +1,71 @@
 :root {
     --blue: #1F99C5;
     --red: #ee0000;
+    --yellow: #FEEA6C;
     --hero-gray: #4F5255;
     --hr-gray: #707070;
     --date-gray: #A5A6A7;
     --dark-blue: #0F4C62;
     --accordion-inactive: #E5E5E5;
     --hero-text: Red Hat Text;
-  }
+    --pfe-band--Padding: 32px;
+   }
 
   body {
     display: grid;
-    grid-template-areas: 
-    "header header header header header"
-    "nav hero hero hero hero"
-    "nav content content content content";
+    grid-template-areas:
+    "header header"
+    "nav ."
+    "nav main";
+    grid-template-rows: 75px 33px auto;
+    grid-template-columns: 290px auto;
     font: var(--hero-text);
     background: #f5f5f5;
   }
 
-  body.solution-home {
-      grid-template-areas:
-      "header header header header header"
-      "nav hero hero hero hero"
-      "nav content content content dashboard";
-  }
-
   body.solution {
-    grid-template-areas:
-    "header header header header header"
-    "nav content content content dashboard";
-}
+      grid-template-areas:
+      "header header"
+      "nav main"
+      "nav main";
+  }
 
 body > header {
     grid-area: header;
+    border-bottom: 3px solid #00000029;
 }
-body > pfe-accordion {
+body > nav {
     grid-area: nav;
 }
-body > pfe-band {
-    grid-area: hero;
+body > nav .home {
+    display: block;
+    max-width: none;
+}
+body > main {
+    grid-area: main;
+    display: grid;
+    grid-template-rows: 311px auto;    
+    grid-template-columns: auto;
+    padding: 0 33px 33px 33px;
+    row-gap: 32px;
+}
+
+main > pfe-band {
+    grid-row: 1;
+    --pfe-cta--BackgroundColor: var(--blue);
+}
+
+main > pfe-band p {
+    max-height: 117px;
+    overflow: hidden;
+}
+
+main > section {
+    grid-row: 2;
 }
 
 cpx-solution-card {
-    width: 380px;
+    width: 360px;
     height: 288px;
     font-size: 12px;
 }
