--- a/src/styles/skitter.css
+++ b/src/styles/skitter.css
@@ -32,7 +32,29 @@
 
 body > header {
     grid-area: header;
-    border-bottom: 3px solid #00000029;
+    box-shadow: 0px 3px 6px #00000029;
+    display: flex;
+    flex-direction: row;
+    padding: 27px 0;
+    line-height: 36px;
+    vertical-align: middle;
+}
+body > header h2 {
+    flex: 0 0 290px;
+    font-size: 24px;
+    line-height: 31px;
+    text-align: center;
+    color: #ee0000;
+}
+
+body > header cpx-search-box {
+    flex: 1 0 auto;
+    text-align: right;
+}
+
+body > header cpx-login {
+    flex: 0 0 auto;
+    padding: 0 36px;
 }
 body > nav {
     grid-area: nav;
@@ -49,6 +71,10 @@ body > main {
     padding: 0 33px 33px 33px;
     row-gap: 32px;
 }
+body.solution > main {
+    padding: 0;
+    grid-template-rows: auto 1fr;
+}
 
 main > pfe-band {
     grid-row: 1;
@@ -62,10 +88,45 @@ main > pfe-band p {
 
 main > section {
     grid-row: 2;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 16px;
+}
+
+body.solution > main > section {
+    padding: 0 33px 33px 33px;
+    grid-template-columns: 2fr 1fr;
+}
+
+body.solution > main > section > article {
+    display: grid;
+    grid-template-columns: 1fr 350px;
+    box-shadow: 0px 3px 6px #00000029;
+    padding: 16px;
+}
+cpx-solution-status {
+    box-shadow: 0px 3px 6px #00000029;
+    padding: 16px;
+}
+}
+main > section h2 {
+    margin-bottom: 16px;
+    grid-column: span 4;
 }
 
 cpx-solution-card {
-    width: 360px;
-    height: 288px;
     font-size: 12px;
+}
+
+pfe-accordion-panel {
+    --pfe-accordion__base--Padding: 0;
+}
+
+pfe-accordion a, pfe-accordion a:visited {
+    padding: 8px 24px;
+    background-color: #e5e5e5;
+    font-size: 16px;
+    font-family: Red Hat Text;
+    color: #000000;
+    display:block;
 }
